Finished buttons and shadows/fixed nav spacing

--- a/style.css
+++ b/style.css
@@ -4,12 +4,13 @@ ul {
 	list-style-type: none;
 	margin: 0;
 	padding: 0;
-	overflow: hidden;
+  overflow: hidden;
+  margin: 20px 8px 20px 8px;
 }
 
 li {
 	display: inline;
-	margin: 0px 4px 0px 4px;
+  margin: 0px 8px 0px 8px;
 }
 
 li a {
@@ -32,8 +33,7 @@ li a:hover {
 .search-icon {
   width: 13px;
   height: 13px;
-  
-  padding-left: 10px;
+  margin-left: 12px;
 }
 
 .input-container i{
@@ -50,7 +50,7 @@ li a:hover {
 .search-bar {
   margin-top: -70px;
   border-radius: 30px;
-  padding-left: 30px;
+  padding-left: 35px;
   width: 100%;
   height: 35px;
   outline: none;
@@ -59,12 +59,26 @@ li a:hover {
 
 .search-bar:hover {
   box-shadow: 0 0 5px rgb(204, 204, 204);
-  
+  border: 1px solid lightgrey;
+}
+
+.btn-box {
+  margin-top: 25px;
+}
+
+button {
+  background-color: rgb(249, 249, 249);
+  border: none;
+  text-decoration: none;
+  padding: 10px 22px;
+  font-family: 'Roboto';
+  font-size: 14px;
+  cursor: pointer;
+}
+
+button:hover {
+  box-shadow: 0 0 5px rgb(204, 204, 204);
   border: 1px solid lightgrey;
 }
 
 
-.btn-box {
-  display: flex;
-  margin-top: 20px;
-}
